src/objects/BEN_CS_GTIN__c.object
<CustomObject>
    <description>This object is used to store CS-GTIN</description>
    <fields>
        <fullName>BEN_Country_Code__c</fullName>
        <description>Country Code based on Selected Country</description>
        <formula>CASE(pkl_Country__c, &quot;France&quot;,&quot;FR&quot;,&quot;Côte D&apos;Ivoire&quot;,&quot;CDI&quot;,
&quot;United States&quot;,&quot;US&quot;,&quot;Trinidad and Tobago&quot;,&quot;TT&quot;,&quot;Canada&quot;,&quot;CA&quot;,
&quot;Dominican Republic&quot;,&quot;DO&quot;,&quot;Singapore&quot;,&quot;SG&quot;,&quot;Philippines&quot;,&quot;PH&quot;,
&quot;United Kingdom&quot;,&quot;GB&quot;,&quot;Costa Rica&quot;,&quot;CR&quot;,&quot;Norway&quot;,&quot;NO&quot;,&quot;Denmark&quot;,&quot;DK&quot;,
&quot;Greece&quot;,&quot;GR&quot;,&quot;Finland&quot;,&quot;FI&quot;,&quot;Sweden&quot;,&quot;SE&quot;,&quot;Belgium&quot;,&quot;BE&quot;,&quot;Ukraine&quot;,&quot;UA&quot;,
&quot;Russian Federation&quot;,&quot;RU&quot;,&quot;Kazakhstan&quot;,&quot;KZ&quot;,&quot;Israel&quot;,&quot;IL&quot;,&quot;Taiwan&quot;,&quot;TW&quot;,&quot;Portugal&quot;,&quot;PT&quot;,
&quot;Hungary&quot;,&quot;HU&quot;,&quot;South Africa&quot;,&quot;ZA&quot;,&quot;Zimbabwe&quot;,&quot;ZW&quot;,&quot;Kenya&quot;,&quot;KE&quot;,&quot;Mozambique&quot;,&quot;MZ&quot;,
&quot;China&quot;,&quot;CN&quot;,&quot;Nicaragua&quot;,&quot;NI&quot;,&quot;El Salvador&quot;,&quot;SV&quot;,&quot;Honduras&quot;,&quot;HN&quot;,
&quot;Guatemala&quot;,&quot;GT&quot;,&quot;Panama&quot;,&quot;PA&quot;,&quot;Mexico&quot;,&quot;MX&quot;,&quot;Colombia&quot;,&quot;CO&quot;,
&quot;Peru&quot;,&quot;PE&quot;,&quot;Uruguay&quot;,&quot;UY&quot;,&quot;Argentina&quot;,&quot;AR&quot;,&quot;Bolivia&quot;,&quot;BO&quot;,&quot;Paraguay&quot;,&quot;PY&quot;,&quot;Chile&quot;,&quot;CL&quot;,
&quot;Brazil&quot;,&quot;BR&quot;,&quot;Spain&quot;,&quot;ES&quot;,&quot;Spain&quot;,&quot;ES&quot;,&quot;Romania&quot;,&quot;RO&quot;,&quot;Slovakia&quot;,&quot;SK&quot;,&quot;Czech Republic&quot;,&quot;CZ&quot;,
&quot;Poland&quot;,&quot;PL&quot;,&quot;Thailand&quot;,&quot;TH&quot;,&quot;Cambodia&quot;,&quot;KH&quot;,&quot;Pakistan&quot;,
&quot;PK&quot;,&quot;New Zealand&quot;,&quot;NZ&quot;,&quot;Australia&quot;,&quot;AU&quot;,&quot;Malaysia&quot;,&quot;MY&quot;,&quot;Vietnam&quot;,&quot;VN&quot;,&quot;Hong Kong&quot;,&quot;HK&quot;,
&quot;Indonesia&quot;,&quot;ID&quot;,&quot;Serbia&quot;,&quot;RS&quot;,&quot;Germany&quot;,&quot;DE&quot;,&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;Netherlands&quot;,&quot;NL&quot;,&quot;Austria&quot;,&quot;AT&quot;,&quot;Ireland&quot;,&quot;IE&quot;,&quot;Italy&quot;,&quot;IT&quot;,&quot;Egypt&quot;,&quot;EG&quot;,&quot;Bulgaria&quot;,&quot;BG&quot;,
&quot;United Arab Emirates&quot;,&quot;AE&quot;,&quot;Turkey&quot;,&quot;TR&quot;,&quot;India&quot;,&quot;IN&quot;,&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BEN Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkl_Market_Cluster__c</fullName>
        <label>Market Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp; RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dt_Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lkp_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>BEN_Category_Master__c</referenceTo>
        <relationshipLabel>CS-GTINs</relationshipLabel>
        <relationshipName>CS_GTINs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pkl_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Pkl_Market_Cluster__c</controllingField>
            <picklistValues>
                <fullName>Cote D&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinidad and Tobago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kazakhstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zimbabwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_MCO__c</fullName>
        <label>MCO</label>
        <picklist>
            <controllingField>Pkl_Market_Cluster__c</controllingField>
            <picklistValues>
                <fullName>West Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico &amp; Greater Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUI&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong,Korea &amp; Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia &amp; Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand &amp; MCLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Super_Category__c</fullName>
        <label>Super Category</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Attached_Spec_Code__c</fullName>
        <label>Attached_Spec_Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Brand__c</fullName>
        <label>Brand</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MRDR_Code_ECC__c</fullName>
        <label>MRDR Code (ECC)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_CPG_Description__c</fullName>
        <label>CPG Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_MRDR_Description__c</fullName>
        <label>MRDR Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Spec_Description__c</fullName>
        <label>Spec_Description</label>
        <type>TextArea</type>
    </fields>
    <label>CS-GTIN</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CS-GTIN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS-GTINs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>